Started creating swagger
