# cmd/server.go
@@ -1,8 +1,8 @@
 package main
 
 import (
-	"github.com/arranzropablo/the-list/cmd/api"
-	_ "github.com/arranzropablo/the-list/cmd/docs" // doc folder generated by swag init
+	"github.com/arranzropablo/lmwtfy/cmd/api"
+	_ "github.com/arranzropablo/lmwtfy/cmd/docs" // doc folder generated by swag init
 	"github.com/swaggo/http-swagger"
 	"log"
 	"net/http"
@@ -10,9 +10,9 @@ import (
 
 const PORT = ":8888"
 
-// @title The List API
+// @title LMWTFY API doc
 // @version 1.0
-// @description This is a sample server to store a list of films.
+// @description This is a simple API which gets a thing to search and returns the URL for the wiki search.
 // @termsOfService http://swagger.io/terms/
 
 // @contact.name Pablo Arranz Ropero
@@ -22,7 +22,6 @@ const PORT = ":8888"
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
-// @host petstore.swagger.io
 // @BasePath /v1
 func main() {
 
@@ -31,11 +30,7 @@ func main() {
 	})
 	http.HandleFunc("/swagger/", httpSwagger.WrapHandler)
 
-	//H2 in-memory database w encrypted passwords
-	http.HandleFunc("/user/new", user.CreateUser)
-	http.HandleFunc("/user/edit", user.EditUser)
-	//To handle dynamic endpoints (without a custom library) we can strip prefix until the dynamic part
-	http.Handle("/user/", http.StripPrefix("/user/", http.HandlerFunc(user.GetUser)))
+	http.HandleFunc("/search", search.Search)
 
 	log.Printf("Listening on http://127.0.0.1%s", PORT)
 	http.ListenAndServe(PORT, nil)
